# globalgamejam2026

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  index.html
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
assets/: dust2.glb  spawn.json
client/: Cargo.toml  index.html
client/assets/: dust2.glb  mask.glb  player.glb  tombe.glb
client/src/: assets.rs  audio.rs  collision.rs  combat.rs  config.rs  debug.rs  game.rs  game_ui.rs  glb.rs  gpu.rs  input.rs  main.rs  map.wgsl  mesh.rs  network.rs  noise.wgsl  player.rs  player.wgsl  postprocess.wgsl  present.wgsl  team.rs  webrtc.rs
client/src/network/: ice.rs  mod.rs  protocol.rs  queue.rs  session.rs  signaling.rs  stats.rs  transport.rs  ui.rs
client/src/render/: camera.rs  cone.rs  cone.wgsl  hud.rs  hud.wgsl  map.rs  map.wgsl  mod.rs  player.rs  player.wgsl  postprocess.rs  postprocess.wgsl  postprocess_coward.wgsl  postprocess_ghost.wgsl  postprocess_hunter.wgsl  present.wgsl  threat.rs  threat.wgsl  traits.rs  view_mask.rs  view_mask.wgsl
server/: Cargo.toml  build.rs  package.json  server.js
server/src/: main.rs  signaling.rs  stun.rs  turn.rs
src/: collision.rs  glb.rs  gpu.rs  main.rs  map.rs  network_player.rs  player.rs  webrtc.rs
