[package]
name = "globalgamejam2026"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "*"
winit = "*"
pollster = "*"
env_logger = "*"
log = "*"
bytemuck = { version = "*", features = ["derive"] }
glam = "*"
web-time = "*"
gltf = "*"
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
parry3d = "*"
rand = { version = "*", features = ["small_rng"] }
getrandom = { version = "*", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
js-sys = "*"
web-sys = { version = "*", features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcIceCandidate",
    "RtcIceCandidateInit", "RtcDataChannel", "RtcDataChannelEvent",
    "RtcDataChannelState", "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcSdpType", "RtcConfiguration", "RtcSignalingState", "RtcIceConnectionState",
    "RtcIceGatheringState", "MessageEvent",
    "HtmlTextAreaElement", "HtmlButtonElement", "HtmlElement",
    "WebSocket", "BinaryType", "CloseEvent", "ErrorEvent",
    "RtcIceServer", "MouseEvent", "PointerEvent", "console"
] }
