[package]
name = "globalgamejam2026"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = "28.0.0"
winit = "0.30.12"
pollster = "0.4.0"
env_logger = "0.11.8"
log = "0.4.29"
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = "0.31.0"
web-time = "1.1.0"
gltf = "1.4.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
parry3d = "0.26.0"
rand = { version = "0.9", features = ["small_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
js-sys = "0.3.85"
web-sys = { version = "0.3.85", features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "Location", "Url",
    "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcIceCandidate",
    "RtcIceCandidateInit", "RtcDataChannel", "RtcDataChannelEvent", "RtcDataChannelInit",
    "RtcDataChannelState", "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcSdpType", "RtcConfiguration", "RtcSignalingState", "RtcIceConnectionState",
    "RtcIceGatheringState", "MessageEvent",
    "HtmlTextAreaElement", "HtmlButtonElement", "HtmlElement",
    "WebSocket", "BinaryType", "CloseEvent", "ErrorEvent",
    "RtcIceServer", "MouseEvent", "PointerEvent", "console",
    "HtmlAudioElement", "Blob", "BlobPropertyBag"
] }
